--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "sass": "^1.64.1",
+    "slick-carousel": "^1.8.1",
+    "swiffy-slider": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
